# langchain-chat-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  bot.py  conftest.py  docker-compose.qdrant.yaml  docker-compose.yaml  logging.ini  main.py  pyproject.toml  pytest.ini
bots/: base.py  factory.py  slack_bot.py  telegram_bot.py
celery_task/: __init__.py  celery_app.py  config.ini
celery_task/tasks/: shopee_tasks.py
configs/: common_config.py
core/: constants.py  enumerate.py
core/ai/agents/: __init__.py  slack_agent.py  utils.py
core/ai/knowledge_base/: shopee_kb.py
core/ai/llms/: __init__.py  base_ai_handler.py  langchain_openai_handler.py  llm_handler.py
core/ai/memories/: __init__.py  postgre_memory.py  (+1 more)
core/bot/: slack_bot.py
core/callbacks/: langfuse_handler.py
core/databases/: __init__.py  async_db.py  db.py
core/decorators/: processing_time.py
core/exceptions/: exception_handler.py
core/loggers/: __init__.py  config.py  handler.py
core/services/: base_api.py  shopee.py
core/utils/: common_utils.py
migrations/: env.py
migrations/versions/: 2024_09_25_0005-1fd2ae68a08e_initial_migration.py  2024_09_25_2334-916db931e6e3_fix_migration.py  2024_09_25_2338-d555724b8145_fix_migration_2.py
notebooks/: RAG_Langchain_Agents.ipynb  langchain_with_history.ipynb  shopee_rag.ipynb  shopee_service.ipynb
scripts/: start-bot.sh  start-dev.sh  start-slack-bot.sh  start-uvicorn.sh
tests/exceptions/: test_exception_handler.py
tests/loggers/: test_logger.py
tests/utils/: test_common_utils.py
(+11 files in other folders)
